--- a/love/love.html
+++ b/love/love.html
@@ -243,7 +243,7 @@
     // chữ của thư bạn muốn gửi
     let indexTextContent = 0;
     let textLetterContent = document.querySelector('.contentLetter');
-    const textLetterP = "Hôm nay là một ngày đặc biệt, ngày sinh nhật người con gái tui yêu. Chúc bà luôn tươi trẻ, khỏe mạnh, cầu mong những gì may mắn nhất, tốt đẹp nhất và hạnh phúc nhất đến với bà. Happy Birthday to my love! Tặng bà bó hoa làm bồ tui nha🌹";
+    const textLetterP = "Hôm nay là một ngày đặc biệt, ngày sinh nhật người con gái tui yêu. Chúc bà luôn tươi trẻ, khỏe mạnh, cầu mong những gì may mắn nhất, tốt đẹp nhất và hạnh phúc nhất đến với bà. Happy Birthday to my love! Tặng bà bó hoa làm bồ tui nha🌹 Nguyễn Hồ Minh Vy 👉👈";
     let timoutTextLetterContent;
     function textCharLetterContent(){
         if (indexTextContent < textLetterP.length) {
